== Version 1.0.9

Release notes here

* Added [#13532] /lib specs should get base EvalContext
* Applied [#13451] Add a null_object option to mock_model (Patch from James Deville)
* Applied [#11919] Making non-implemented specs easy in textmate (Patch from Scott Taylor)
* Applied [#13274] ThrowSymbol recognized a NameError triggered by Kernel#method_missing as a thrown Symbol
* Applied [#12722] the alternate file command does not work in rails views due to scope (Patch from Carl Porth)
* Moved instance method of Behaviour to Class methods
* Instances of Behaviour are now executed as the spec
* Renamed Example to ExampleDefinition
* Added ExampleDefinition
* Added story runner framework based on rbehave [#12628]
* Applied [#13336] Helper directory incorrect for rake stats in statsetup task (Patch from Curtis Miller)
* Applied [#13339] Add the ability for spec_parser to parse describes with :behaviour_type set (Patch from Will Leinweber and Dav Yaginuma)
* Fixed [#13271] incorrect behaviour with expect_render and stub_render
* Applied [#13129] Fix failing specs in spec_distributed (Patch from Bob Cotton)
* Applied [#13118] Rinda support for Spec::Distributed (Patch from Bob Cotton)
* Removed BehaviourEval
* Removed Behaviour#inherit
* Moved implementation of install_dependencies to example_rails_app
* Renamed RSPEC_DEPS to VENDOR_DEPS
* Added Example#not_implemented?
* You can now stub!(:msg).with(specific args)
* describe("A", Hash, "with one element") will generate description "A Hash with one element" (Tip from Ola Bini)
* Applied [#13016] [DOC] Point out that view specs render, well, a view (Patch from Jay Levitt)
* Applied [#13078] Develop rspec with autotest (Patch from Scott Taylor)
* Fixed [#13065] Named routes throw a NoMethodError in Helper specs (Patches from James Deville and Mike Mangino)
* Added (back) the verbose attribute in Spec::Rake::SpecTask
* Changed documentation to point at the new http svn URL, which is more accessible.

== Version 1.0.8
