@@ -145,6 +145,13 @@ Specify the paths generated by custom routes.
 route_for(:controller => "hello", :action => "world").should == "/hello/world"
 </ruby>
 
+Specify the parameters generated from routes.
+
+<ruby>
+params_from(:get, "/hello/world").should == {:controller => "hello", :action => "world"}
+</ruby>
+
+
 h2. Sample Controller Example
 
 <ruby file="../example_rails_app/spec/controllers/people_controller_spec.rb"/>
