@@ -138,12 +138,22 @@ module Spec
 
         # Uses ActionController::Routing::Routes to generate
         # the correct route for a given set of options.
-        # == Examples
+        # == Example
         #   route_for(:controller => 'registrations', :action => 'edit', :id => 1)
         #     => '/registrations/1;edit'
         def route_for(options)
           ensure_that_routes_are_loaded
           ActionController::Routing::Routes.generate(options)
+        end
+
+        # Uses ActionController::Routing::Routes to parse
+        # an incoming path so the parameters it generates can be checked
+        # == Example
+        #   params_from(:get, '/registrations/1;edit')
+        #     => :controller => 'registrations', :action => 'edit', :id => 1
+        def params_from(method, path)
+          ensure_that_routes_are_loaded
+          ActionController::Routing::Routes.recognize_path(path, :method => method)
         end
 
         protected
